--- a/src/jbookreader/classes.properties
+++ b/src/jbookreader/classes.properties
@@ -1,3 +1,4 @@
 jbookreader.book.factory = jbookreader.book.impl.BookFactory
 jbookreader.compositor = jbookreader.formatengine.impl.SimpleCompositor
 jbookreader.formatengine = jbookreader.formatengine.impl.FormatEngine
+sac.parser = org.w3c.flute.parser.Parser
