--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/java-1.5.0-sun-1.5.0.10"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Flute"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/SAC"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
