--- a/src/jbookreader/classes.properties
+++ b/src/jbookreader/classes.properties
@@ -1,4 +1,6 @@
 jbookreader.factory.book = jbookreader.book.impl.BookFactory
+jbookreader.factory.sac.selector = jbookreader.css.selectors.CSSSelectorFactory
+jbookreader.factory.sac.condition = jbookreader.css.conditions.CSSConditionFactory
 jbookreader.compositor = jbookreader.formatengine.impl.SimpleCompositor
 jbookreader.formatengine = jbookreader.formatengine.impl.FormatEngine
 sac.parser = org.w3c.flute.parser.Parser
