--- a/build.xml
+++ b/build.xml
@@ -99,7 +99,7 @@
     <target name="jar" depends="test">
 	<jar destfile="${ant.project.name}-${project.version}.jar">
 	    <fileset dir="bin" excludes="**/*Test*" />
-	    <fileset dir="resources" />
+	    <fileset dir="." includes="resources/**" />
 	    <fileset file="COPYING" />
 	    <manifest>
 	    	<attribute name="Sealed" value="true" />
