--- a/src/jbookreader/classes.properties
+++ b/src/jbookreader/classes.properties
@@ -3,5 +3,5 @@ jbookreader.factory.sac.selector = jbookreader.css.selectors.CSSSelectorFactory
 jbookreader.factory.sac.condition = jbookreader.css.conditions.CSSConditionFactory
 jbookreader.compositor = jbookreader.formatengine.impl.SimpleCompositor
 jbookreader.formatengine = jbookreader.formatengine.impl.FormatEngine
-jbookreader.stylestack = jbookreader.formatengine.style.impl.StyleStackImpl
+jbookreader.stylestack = jbookreader.style.impl.StyleStackImpl
 sac.parser = org.w3c.flute.parser.Parser
