Split away rendering model
Signed-off-by: Dmitry Baryshkov <dbaryshkov@gmail.com>

--- a/src/jbookreader/classes.properties
+++ b/src/jbookreader/classes.properties
@@ -4,4 +4,5 @@ jbookreader.factory.sac.condition = jbookreader.css.conditions.CSSConditionFacto
 jbookreader.compositor = jbookreader.formatengine.impl.SimpleCompositor
 jbookreader.formatengine = jbookreader.formatengine.impl.FormatEngine
 jbookreader.stylestack = jbookreader.style.impl.StyleStackImpl
+jbookreader.swing.model = jbookreader.rendering.model.ContinuousBookRenderingModel
 sac.parser = org.w3c.flute.parser.Parser
