--- a/src/jbookreader/classes.properties
+++ b/src/jbookreader/classes.properties
@@ -5,4 +5,5 @@ jbookreader.compositor = jbookreader.formatengine.impl.SimpleCompositor
 jbookreader.formatengine = jbookreader.formatengine.impl.FormatEngine
 jbookreader.stylestack = jbookreader.style.impl.StyleStackImpl
 jbookreader.swing.model = jbookreader.rendering.model.ContinuousBookRenderingModel
+jbookreader.text.model = jbookreader.rendering.model.ContinuousBookRenderingModel
 sac.parser = org.w3c.flute.parser.Parser
