--- a/src/jbookreader/classes.properties
+++ b/src/jbookreader/classes.properties
@@ -4,6 +4,6 @@ jbookreader.factory.sac.condition = jbookreader.css.conditions.CSSConditionFacto
 jbookreader.compositor = jbookreader.formatengine.impl.SimpleCompositor
 jbookreader.formatengine = jbookreader.formatengine.impl.FormatEngine
 jbookreader.stylestack = jbookreader.style.impl.StyleStackImpl
-jbookreader.swing.model = jbookreader.rendering.model.ContinuousBookRenderingModel
-jbookreader.text.model = jbookreader.rendering.model.ContinuousBookRenderingModel
+jbookreader.swing.model = jbookreader.rendering.model.impl.ContinuousBookRenderingModel
+jbookreader.text.model = jbookreader.rendering.model.impl.ContinuousBookRenderingModel
 sac.parser = org.w3c.flute.parser.Parser
